# VertexCentral

./: .gitignore  CMakeLists.txt  README.md  postgresql_schema.sql
AxiomCentralAPI/: AxiomCentralAPI.sln
AxiomCentralAPI/core/: DataInterface.cs
AxiomCentralAPI/handlers/: ApplicationPermissionHandler.cs  DevicePermissionHandler.cs  RootHandler.cs
AxiomCentralAPI/loaders/: AreaLoader.cs  AssetToDeviceMappingLoader.cs  DeviceHierarchyLoader.cs  EnterpriseLoader.cs  TelemetryLoader.cs
AxiomCentralAPI/models/: Asset.cs  LoginSession.cs  User.cs
EdgeLiteAPI/: EdgeLiteAPI.sln  Program.cs
EdgeLiteAPI/core/: DataInterface.cs  ModelBase.cs
EdgeLiteAPI/handlers/: AlarmHandler.cs  ApplicationHandler.cs  AreaHandler.cs  (+22 more)
axiomcentralapi/: Program.cs
axiomcentraui/: package-lock.json  package.json
backup_code/: AbnfAdapter.cpp  AbnfAdapter.hpp  AbnfMessage.cpp  AbnfMessage.hpp  Configuration.cpp  Configuration.hpp  Defines.hpp  Directory.cpp  Directory.hpp  EdgeViewAPI.cpp  EventHandler.cpp  EventHandler.hpp  HttpHandler.cpp  HttpHandler.hpp  HttpServer.cpp  HttpServer.hpp  Logger.cpp  Logger.hpp  Mutex.cpp  Mutex.hpp  NetworkHelper.cpp  NetworkHelper.hpp  ProcessLock.cpp  ProcessLock.hpp  ResourceHandler.cpp  ResourceHandler.hpp  Responder.cpp  Responder.hpp  SignalHandler.cpp  SignalHandler.hpp  StringHandler.cpp  StringHandler.hpp  Timestamp.cpp  Timestamp.hpp  Variant.cpp  Variant.hpp  Version.hpp
include/: Model.h
schema/: Model.h  iot_mongodb_schema.js
src/: Model.c  Server.c
vertexcentralapi/: Program.cs  VertexCentralAPI.csproj  VertexCentralAPI.sln
(+175 files in other folders)
